--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "compile": "tsc",
     "preexample": "yarn run compile",
     "example": "prettier --config ./examples/.prettierrc --plugin lib/src/index.js",
-    "test": "jest -i",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js -i",
     "type-check": "tsc --noEmit",
     "prepublishOnly": "npm run compile && npm run test"
   },
@@ -42,9 +42,9 @@
     "@types/lodash": "4.14.168",
     "@types/node": "20.8.6",
     "@vue/compiler-sfc": "^3.2.41",
-    "jest": "26.6.3",
+    "jest": "29.7.0",
     "prettier": "3.3.2",
-    "ts-jest": "26.5.3",
+    "ts-jest": "29.2.2",
     "typescript": "4.9.4"
   },
   "peerDependencies": {
